modal and dialog with cdk added

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -3,5 +3,6 @@
         <li><a routerLink="/pipelines">pipelines</a></li>
         <li><a routerLink="/signals">signals</a></li>
         <li><a routerLink="/components">components</a></li>
+        <li><a routerLink="/modal">modal</a></li>
     </ul>
 </nav>
