overlay for input file

--- a/src/app/features/components/demos/userprofile/userpicture.component.html
+++ b/src/app/features/components/demos/userprofile/userpicture.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-<img  [src]="imgUrl()">
-<!-- <label for="profilePicture">Bild hochladen</label> -->
-<input #profilePicture type="file" (change)="ChangeProfileImg(profilePicture.files)">
+    <img [src]="imgUrl()">
+    <label for="profilePicture" class="file-upload-overlay" (click)="profilePicture.click()">
+        <span>Bild hochladen</span>
+    </label>
+    <input #profilePicture type="file" (change)="ChangeProfileImg(profilePicture.files)">
 </div>
