--- a/src/app/features/components/components.component.html
+++ b/src/app/features/components/components.component.html
@@ -1,14 +1,9 @@
+<details>
+    <summary>Userprofile Component</summary>
+    <app-userprofile [(name)]="userName" [imgUrl]="imgUrl()"></app-userprofile>
+</details>
+<details>
+    <summary>File Drag Drop</summary>
 
-
-<h3>Userprofile Component</h3>
-<code>/**
-    Userprofile Component with editable Name auf Profile Picture.
-    **/</code>
-<app-userprofile [(name)]="userName" [imgUrl]="imgUrl()"></app-userprofile>
-<h3>File Drag Drop</h3>
-<code>
-    /**
-
-    **/
-</code>
-<app-dragdrop></app-dragdrop>
+    <app-dragdrop></app-dragdrop>
+</details>
