--- a/src/app/features/signals/signals.component.html
+++ b/src/app/features/signals/signals.component.html
@@ -1,2 +1,5 @@
-<h2>COUNTER IS => {{counter()}}</h2>
-<button (click)="updateCounter()">Counter ++</button>
+<details>
+    <summary>Counter</summary>
+    <h2>COUNTER IS => {{counter()}}</h2>
+    <button (click)="updateCounter()">Counter ++</button>
+</details>
