--- a/src/app/features/dialogs/dialogs.component.html
+++ b/src/app/features/dialogs/dialogs.component.html
@@ -1,5 +1,10 @@
-<button (click)="openModal()">Open Modal</button>
-<button (click)="openDialog()">OpenDialog</button>
+<details>
+    <summary>Simple Modal and Dialog</summary>
+    <section style="display:flex; gap:10px;">
+        <button (click)="openModal()">Open Modal</button>
+        <button (click)="openDialog()">OpenDialog</button>
+    </section>
+</details>
 <ng-template cdkPortal>
     <app-modal></app-modal>
 </ng-template>
