--- a/src/app/features/pipeline/pipeline.component.html
+++ b/src/app/features/pipeline/pipeline.component.html
@@ -1,13 +1,13 @@
-<p>pipeline works!</p>
-
-<h2>Time To Minutes Pipeline</h2>
-<section style="display: flex;flex-direction: row; gap:10px;">
-    <div style="display: flex;flex-direction: column;">
-        <label for="timeInput">Input</label>
-        <input type="time" timeInput [value]="timeStr" (change)="onChange($event)">
-    </div>
-    <div style="display:flex; flex-direction: column;">
-        <label for="pipelineInput">Result</label>
-        <input pipelineInput readonly="true" [value]="timeStr | timeToMinutes">
-    </div>
-</section>
+<details>
+    <summary>Time To Minutes Pipeline</summary>
+    <section style="display: flex;flex-direction: row; gap:10px;">
+        <div style="display: flex;flex-direction: column;">
+            <label for="timeInput">Input</label>
+            <input type="time" timeInput [value]="timeStr" (change)="onChange($event)">
+        </div>
+        <div style="display:flex; flex-direction: column;">
+            <label for="pipelineInput">Result</label>
+            <input pipelineInput readonly="true" [value]="timeStr | timeToMinutes">
+        </div>
+    </section>
+</details>
